--- a/course-3.html
+++ b/course-3.html
@@ -19,13 +19,13 @@
 
 <header class="header">
 
-    <a href="home.html" class="logo"> <i class="fas fa-graduation-cap"></i> educa </a>
+    <a href="index.html" class="logo"> <i class="fas fa-graduation-cap"></i> educa </a>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
             <li><a href="#">Subjects</a>
                 <ul> <li><a href="course-1.html">Software Engineering and Project Management</a></li>
@@ -50,7 +50,7 @@
 
 <section class="heading">
     <h3>21CS63</h3>
-    <p> <a href="home.html">home >></a> Computer Graphics </p>
+    <p> <a href="index.html">home >></a> Computer Graphics </p>
 </section>
 
 <!-- course-2 section starts  -->
@@ -157,7 +157,7 @@
 
         <div class="box">
             <h3>explore</h3>
-            <a href="home.html"> <i class="fas fa-arrow-right"></i> home </a>
+            <a href="index.html"> <i class="fas fa-arrow-right"></i> home </a>
             <a href="about.html"> <i class="fas fa-arrow-right"></i> about </a>
             <a href="course-1.html"> <i class="fas fa-arrow-right"></i>Software Engineering and Project Management</a>
             <a href="course-2.html"> <i class="fas fa-arrow-right"></i> Data Science And Visualization</a>
